-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 19, 20
-
Component/s: hotspot
-
b07
-
x86_64, aarch64
-
os_x, windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8294451 | 19.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8291013 | 17.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8291488 | 17.0.5 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8291008 | 11.0.17-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8291622 | 11.0.17 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
applications/ctw/modules/java_desktop_2.java
Here's snippets from the failure's hs_err_pid file:
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S5094/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fcd64a19-1dac-41a4-99ab-c89a68e285a9/runs/e3c63533-f3c5-4084-a257-bfdbff386962/workspace/open/src/hotspot/share/opto/callnode.cpp:1629), pid=17206, tid=38403
# assert(init != __null) failed: initialization not found
#
# JRE version: Java(TM) SE Runtime Environment (20.0+6) (fastdebug build 20-ea+6-298)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+6-298, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
<snip>
--------------- T H R E A D ---------------
Current thread (0x000000013a811810): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=38403, stack(0x000000016de70000,0x000000016e073000)]
Current CompileTask:
C2: 11097 4096 b javax.swing.plaf.basic.BasicPopupMenuUI$BasicMenuKeyListener::menuKeyPressed (312 bytes)
Stack: [0x000000016de70000,0x000000016e073000], sp=0x000000016e06f150, free space=2044k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x11abfb4] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x5d8
V [libjvm.dylib+0x11ac6f0] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, char*)+0x40
V [libjvm.dylib+0x604720] report_vm_error(char const*, int, char const*, char const*, ...)+0x80
V [libjvm.dylib+0x47c1e0] AllocateArrayNode::make_ideal_length(TypeOopPtr const*, PhaseTransform*, bool)+0x180
V [libjvm.dylib+0xdb4a3c] LoadRangeNode::Ideal(PhaseGVN*, bool)+0x180
V [libjvm.dylib+0xee4f9c] PhaseIterGVN::transform_old(Node*)+0x140
V [libjvm.dylib+0xee48a0] PhaseIterGVN::optimize()+0xdc
V [libjvm.dylib+0x5701d8] Compile::Optimize()+0x22c
V [libjvm.dylib+0x56ed28] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x12e4
V [libjvm.dylib+0x46ac38] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x180
V [libjvm.dylib+0x58b094] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x6c8
V [libjvm.dylib+0x58a7e0] CompileBroker::compiler_thread_loop()+0x2a0
V [libjvm.dylib+0x969b0c] JavaThread::thread_main_inner()+0x238
V [libjvm.dylib+0x1103f24] Thread::call_run()+0x220
V [libjvm.dylib+0xe8d64c] thread_native_entry(Thread*)+0x160
C [libsystem_pthread.dylib+0x7240] _pthread_start+0x94
- backported by
-
JDK-8291008 test fails "assert(init != __null) failed: initialization not found"
-
- Resolved
-
-
JDK-8291013 test fails "assert(init != __null) failed: initialization not found"
-
- Resolved
-
-
JDK-8291488 test fails "assert(init != __null) failed: initialization not found"
-
- Resolved
-
-
JDK-8291622 test fails "assert(init != __null) failed: initialization not found"
-
- Resolved
-
-
JDK-8294451 test fails "assert(init != __null) failed: initialization not found"
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/60a68901
-
Commit
openjdk/jdk17u-dev/a747955b
-
Commit
openjdk/jdk19u/e6bd2c93
-
Commit
openjdk/jdk/70fce07a
-
Review
openjdk/jdk11u-dev/1282
-
Review
openjdk/jdk17u-dev/601
-
Review
openjdk/jdk19u/35
-
Review
openjdk/jdk/9497