8290246: test fails "assert(init != __null) failed: initialization not found"